--- a/support.html
+++ b/support.html
@@ -311,7 +311,7 @@
             }
 
             try {
-                const res = await fetch("https://91f615595b2c.ngrok-free.app/api/support/public-create", {
+                const res = await fetch("https://sarqyt.onrender.com/api/support/public-create", {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, category, text })
