--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <button onclick="showStoreLookup('view')">Просмотреть магазин</button>
     <button onclick="showStoreLookup('edit')">Редактировать магазин</button>
     <div class="nav-buttons">
-      <button class="nav-button" onclick="window.location.href='contact.html'">Связаться с нами</button>
+      <button class="nav-button" onclick="window.location.href='support.html'">Связаться с нами</button>
       <button class="nav-button" onclick="window.location.href='legal.html'">Юридическая информация</button>
     </div>
   </div>
@@ -221,7 +221,7 @@
     <div id="storesList"></div>
     <button onclick="goBackToDashboard()">Назад к панели управления</button>
     <div class="nav-buttons">
-      <button class="nav-button" onclick="window.location.href='contact.html'">Связаться с нами</button>
+      <button class="nav-button" onclick="window.location.href='support.html'">Связаться с нами</button>
       <button class="nav-button" onclick="window.location.href='legal.html'">Юридическая информация</button>
     </div>
   </div>
@@ -239,7 +239,7 @@
     <button onclick="submitStore()">Создать магазин</button>
     <button onclick="goBackToDashboard()">Назад</button>
     <div class="nav-buttons">
-      <button class="nav-button" onclick="window.location.href='contact.html'">Связаться с нами</button>
+      <button class="nav-button" onclick="window.location.href='support.html'">Связаться с нами</button>
       <button class="nav-button" onclick="window.location.href='legal.html'">Юридическая информация</button>
     </div>
   </div>
@@ -252,7 +252,7 @@
     <button onclick="goBackToDashboard()">Назад</button>
     <div id="lookupResult"></div>
     <div class="nav-buttons">
-      <button class="nav-button" onclick="window.location.href='contact.html'">Связаться с нами</button>
+      <button class="nav-button" onclick="window.location.href='support.html'">Связаться с нами</button>
       <button class="nav-button" onclick="window.location.href='legal.html'">Юридическая информация</button>
     </div>
   </div>
@@ -266,7 +266,7 @@
     <button onclick="submitEdit()">Сохранить изменения</button>
     <button onclick="goBackToDashboard()">Назад</button>
     <div class="nav-buttons">
-      <button class="nav-button" onclick="window.location.href='contact.html'">Связаться с нами</button>
+      <button class="nav-button" onclick="window.location.href='support.html'">Связаться с нами</button>
       <button class="nav-button" onclick="window.location.href='legal.html'">Юридическая информация</button>
     </div>
   </div>
